# esp-cloud-remote

./: .gitignore  README.md  package-lock.json  tatus
Back-End/: DatabaseQueries.ts  MqttClient.js  MqttClient.ts  Pool.ts  package-lock.json  package.json  server.js
Back-End/controllers/: AirConditioner.controller.ts  Device.controller.ts
Back-End/data_models/: AirConditioner.ts  AirConditionerSet.ts  AirConditionerStatus.ts  Device.ts  DeviceStatus.ts  User.ts
Back-End/mqtt-node/: mqtt-communication.js
Back-End/mqtt_node/: mqtt-communication.js
Back-End/routes/: AirConditioner.routes.ts  Device.routes.ts
Back-End/services/: AirConditioner.ts  Device.ts  MQTTService.ts  Pool.ts
Database layer/: analysis.txt  esp_database.sql
Front-End/: index.html  index.html.old  styles.css
Front-End/bluetooth-connection/: available-esp-list.html  connect-esp-intro.html  esp-choose-name.html  esp-choose-wifi.html  esp-connected-successfully.html  put-esp-in-connection.html  wifi-connection-password.html  wifi-connection.html
Front-End/bluetooth-page-wifi/: bluetooth-page-wifi.css  bluetooth-page-wifi.html
Front-End/exercises-hamza/: anatomy-of-a-component.ts  communicating-with-Input.ts  deferrable-views.ts  (+9 more)
Hardware/: EasyEDAProject.json  parts list.txt
Hardware/ESPIDF-Server/components/ir_remote_wrapper/: CMakeLists.txt
Hardware/ESPIDF-Server/components/mqtt_service/: CMakeLists.txt
Hardware/ESPIDF-Server/components/mqtt_service/include/: mqtt_service.h  mqtt_topics.h  mqtt_types.h
Hardware/ESPIDF-Server/components/mqtt_service/src/: mqtt_credentials.c  mqtt_credentials.cpp  mqtt_events.c  mqtt_events.cpp  mqtt_handlers.c  mqtt_handlers.cpp  mqtt_internal.h  mqtt_registration.c  mqtt_registration.cpp  mqtt_service.c  mqtt_service.cpp  mqtt_subscriptions.cpp
Hardware/ESPIDF-Server/main/: CMakeLists.txt  Kconfig.projbuild  app_main.c  ble_communication.cpp  ble_communication.h  idf_component.yml  ir_communication.c  main.cpp  mqtt_communication.c  mqtt_communication.h  mqtt_comunication.c  mqtt_comunication.h  wifi_control.c  wifi_control.h
Hardware/ESPIDF-Server/main/ble_serice/: ble_communication.h
Hardware/ESPIDF-Server/main/ir_service/: ir_communication.h  ir_remote.cpp  ir_remote.h  ir_remote_lib_exmp_arduino.cpp
Hardware/ESPIDF-Server/main/mqtt_service/: mqtt_communication.c  mqtt_communication.h
Hardware/ESPIDF-Server/main/wifi_service/: wifi_control.c  wifi_control.h
(+115 files in other folders)
