idf_component_register(
        SRCS
        "src/mqtt_service.cpp"
        "src/mqtt_events.cpp"
        "src/mqtt_subscriptions.cpp"
        "src/mqtt_handlers.cpp"
        "src/mqtt_credentials.cpp"
        "src/mqtt_registration.cpp"
        INCLUDE_DIRS
        "include"
        REQUIRES
        wifi_service
        mqtt
        esp_http_client
        json
        nvs_flash
        ir_service
)
target_include_directories(${COMPONENT_LIB} PUBLIC "${CMAKE_CURRENT_SOURCE_DIR}/include")